--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/salon-karte/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salon Karte</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/salon-karte/src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
