--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!doctype html>
-<html lang="">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/salon-karte/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups" />
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp" />
-    <title>Salon Karte</title>
+    <title>サロンカルテ</title>
+    <script>
+      // GitHub Pagesでの404エラーを防ぐためのリダイレクト
+      ;(function (l) {
+        if (l.search[1] === '/') {
+          var decoded = l.search
+            .slice(1)
+            .split('&')
+            .map(function (s) {
+              return s.replace(/~and~/g, '&')
+            })
+            .join('?')
+          window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash)
+        }
+      })(window.location)
+    </script>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
