--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
           window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash)
         }
       })(window.location)
+
+      // 認証後のリダイレクト処理
+      window.addEventListener('load', function () {
+        const currentPath = window.location.pathname
+        const basePath = '/salon-karte/'
+        if (currentPath.startsWith(basePath)) {
+          const newPath = currentPath.replace(basePath, '/')
+          window.history.replaceState(null, null, newPath)
+        }
+      })
     </script>
   </head>
   <body>
